--- a/style.css
+++ b/style.css
@@ -2,30 +2,23 @@
 * {
   box-sizing: border-box;
   position: relative;
-}  
-
-body{
   margin: 0;
   padding: 0;
-}
-
+}  
   
   
-  .nav {
-      min-height: 40px;
-      background-color: white;
-      text-align: center;
-      padding: 10px;
-      font-weight: 600;
+  .header_inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 86px 25px 0; 
     }
   
-  .menu {
+  .nav {
     display: flex;
     flex-flow: row;
     color: #fff;
     list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
     justify-content: space-around;
   }
   
@@ -34,42 +27,29 @@ body{
   }
 
   .icon {
-      width: 100%;
-      height: 100%;
-      padding-top: 18px;
-      padding-bottom: 18px;
-      padding-left: 50px ;
+      z-index: 2;
+      padding-left: 98px;
+  }
+
+  .menu{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+
   }
   
-  .home{
+  .name{
     color: #4CD7D2;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Nunito Sans', sans-serif;
-    margin-left: 1260px;
-    font-size: 13px;
-    margin-top: 18px;
-    padding-bottom: 18px;
-    padding: 10px;
   }
 
-  .about {
+  .menu__item__link{
     color: black;
+    font-size: 12pt;
+    padding: 0 20px 0 0;
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 13px;
-    padding-top: 18px;
-    padding-bottom: 18px;
-
+    font-weight: 600;
   }
 
-  .contact {
-    color: black;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 13px;
-    padding-top: 18px;
-    padding-bottom: 18px;
-  }
 
   a {
     text-decoration: none;
@@ -79,62 +59,41 @@ body{
     background-color: #F6F6F6;
   }
 
-  .headermaintext {
+  .header_main_text {
     display: flex;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 45px;
     padding-top: 70px;
-    font-weight: 1000;
+    font-weight: 400;
   }
 
-  .headersecondarytext {
+  .header_secondary_text {
     display: flex;
     justify-content: center;
-    font-family: 'Montserrat', sans-serif;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 20px;
     color: #808080;
     padding-top: 5px;
   }
 
-  .headersecondarytexttwo{
+  .header_secondary_text_two{
     display: flex;
     justify-content: center;
-    font-family: 'Montserrat', sans-serif;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 20px;
     padding-bottom: 70px;
     color: #808080;
   }
 
-  .cat1 {
+  .image_item {
     width: 375px;
     height: 375px;
+    transition: 1s; 
   }
 
-  .cat2 {
-    width: 375px;
-    height: 375px;
-  }
-
-  .cat3 {
-    width: 375px;
-    height: 375px;
-  }
-
-  .cat4 {
-    width: 375px;
-    height: 375px;
-  }
-
-  .catsection{
-    margin: 0;
-    padding: 0;
-  }
-
-  .footerpart{
+  .footer_part{
     padding-top: 60px;
     display: flex;
     flex-flow: row;
@@ -145,26 +104,11 @@ body{
     padding-bottom: 60px;
   }
 
-  .footermaintext{
+  .footer_main_text{
     color: #FFFFFF;
   }
-
-  .div1{
-    
-  }
-
-  .div2{
- 
-  }
-
-  .div3{
-
-  }
-
-  .div4{
-
-  }
-
-  .div5{
-
-  }
+  
+  .image_item:hover {
+    transform: scale(1.1); /* Увеличиваем масштаб */
+    z-index: 5;
+   }
